# opencv_playground

./: .envrc  README.md  shell.nix  webcam.py
.direnv/: flake-profile-1-link  flake-profile-2-link
setup1/: README.md  default.nix  flake.nix  pyproject.toml  webcam.py
setup1/.direnv/: flake-profile-3-link
setup2/: README.md  pyproject.toml
setup2/app/: display2.py  webcam.py
