[tool.poetry]
name = "opencv-playground"
version = "0.1.0"
description = ""
authors = ["Björn Ellensohn <bjoern.ellensohn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webcam = 'webcam:main'